# suj-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  linter-report.txt  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml  pylint.yml
blog/: admin.py  models.py  serializers.py  settings.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comentario_texto.py
blog/templates/blog/: index.html
felipebastosprobr/: asgi.py  settings.py  urls.py  wsgi.py
felipebastosprobr/templates/: base.html
mysite/: settings.py  urls.py  views.py
mysite/templates/mysite/: index.html
posts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_datetime.py  0002_alter_post_texto_alter_post_titulo.py  0002_tag_alter_post_options_post_tags.py  0003_blog_comentario.py  0004_delete_blog_remove_post_autor_alter_tag_label.py
posts/templates/posts/: index.html
src/: manage.py
src/authentication/: admin.py  apps.py  email.py  models.py  tests.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py  0002_user_genero.py  0003_alter_user_genero.py
src/authentication/templates/authentication/: activation.html
src/felipebastosprobr/: asgi.py  settings.py  urls.py  wsgi.py
src/jogos/: models.py  serializers.py  urls.py  views.py
src/jogos/migrations/: 0001_initial.py  0002_modalidade_categoria_modalidade_tipo.py  0003_remove_equipes_jogadores.py
