[tool.poetry]
name = "felipebastosprobr"
version = "0.1.0"
description = "Meu site pessoal"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
pythonanywhere = "^0.9.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.9.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
